[gd_scene load_steps=7 format=3 uid="uid://srrvpjo26pdu"]

[ext_resource type="Texture2D" uid="uid://36boaeh2akm0" path="res://fmod/DPU2025/Assets/Character/bubble_idle.png" id="1_r1hty"]
[ext_resource type="Script" path="res://test_scene_script/test_player.gd" id="2_72r6y"]
[ext_resource type="Texture2D" uid="uid://bbxr4wpjwdogj" path="res://assets/sprites/characters/bubble_head-Sheet2.png" id="3_p5vyw"]
[ext_resource type="Texture2D" uid="uid://c4pntvw0k444w" path="res://assets/sprites/characters/bubble_face-Sheet.png" id="4_r6oq8"]
[ext_resource type="Script" path="res://test_scene_script/area_player.gd" id="5_e5ne1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6fyko"]
radius = 6.66667

[node name="test_player" type="Sprite2D" node_paths=PackedStringArray("face_sprite", "head_sprite", "area_player") groups=["players"]]
scale = Vector2(3, 3)
texture = ExtResource("1_r1hty")
script = ExtResource("2_72r6y")
face_sprite = NodePath("face_sprite")
head_sprite = NodePath("head_sprite")
area_player = NodePath("area_player")

[node name="head_sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_p5vyw")
hframes = 8
region_rect = Rect2(0, 0, 96, 32)

[node name="face_sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_r6oq8")
hframes = 11
region_rect = Rect2(0, 0, 96, 32)

[node name="area_player" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 62
script = ExtResource("5_e5ne1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_player"]
shape = SubResource("CircleShape2D_6fyko")
